organization: fix mis-aligned searchbox and fix wrong bg color

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6204,12 +6204,12 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
   vertical-align: middle;
 }
 
-#s2id_projects {
-  margin-top: 10px;
-}
-
 .group-project-name {
   font-size: 12px;
   font-weight: bold;
   margin-right: 10px;
+}
+
+.group-board {
+      width: 100% !important;
 }
